vagrant/k8s-unified/manifests/ns1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: meu-apache
  name: meu-apache
  namespace: ns1
spec:
  selector:
    matchLabels:
      app: meu-apache
  template:
    metadata:
      labels:
        app: meu-apache
    spec:
      containers:
      - image: httpd:alpine
        imagePullPolicy: Always
        name: httpd
        ports:
        - containerPort: 80
        volumeMounts:
        - name: static-page
          mountPath: /usr/local/apache2/htdocs/meu-apache/index.html
          subPath: index.html
      volumes:
      - name: config
        configMap: 
          name: meu-apache
      - name: static-page
        emptyDir: {}
