vagrant/k8s-unified/manifests/ns1/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: meu-apache
  name: meu-apache
  namespace: ns1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: meu-apache
  type: ClusterIP
