vagrant/k8s-unified/manifests/ns1/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-frontend
  namespace: ns1
spec:
  parentRefs:
  - name: dev-k8s-local           # Must match the name of your Gateway resource
    namespace: nginx-gateway    # The namespace where your Gateway is located
  hostnames:
  - "dev.k8s.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /meu-apache
    backendRefs:
    - name: meu-apache
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /root
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: meu-apache      # The name of your Kubernetes Service
      port: 80
